[package]
name = "async-redis-session-v2"
version = "0.2.3"
authors = ["Jacob Rothstein <hi@jbr.me>", "Nordine Bittich"]
edition = "2021"
description = "redis session store for async-session. Fork with updated dependencies"
readme = "README.md"
repository = "https://github.com/nbittich/async-redis-session"
documentation = "https://github.com/nbittich/async-redis-session"
license = "MIT OR Apache-2.0"
keywords = ["sessions", "tide", "async-session", "redis"]
categories = ["web-programming::http-server", "web-programming", "database"]

[dependencies.redis]
version = "0.24.0"
features = ["aio", "async-std-comp"]

[dependencies]
async-session = "3.0.0"

[dev-dependencies]
async-std = { version = "1.12.0", features = ["attributes"] }
